--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
-/*body {*/
-    /*margin : 0;*/
-    /*width: 100%;*/
-    /*height: 100%;*/
-/*}*/
-
+#canvas {
+    vertical-align: top;
+}
+form {
+    display: inline-block;
+}
 
 
