--- a/main.css
+++ b/main.css
@@ -6,3 +6,21 @@ form {
 }
 
 
+input[type="range"] {
+    position: relative;
+    margin-left: 1em;
+}
+input[type="range"]:after,
+input[type="range"]:before {
+    position: absolute;
+    top: 1em;
+    color: #aaa;
+}
+input[type="range"]:before {
+    left:0em;
+    content: "flux faible";
+}
+input[type="range"]:after {
+    right: 0em;
+    content: "flux élevé";
+}
